--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Title</title>
+  <title>Hello Wordld ?</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
