--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-  <h2> Hello World! </h2>
+  <h1>Users</h1>
+  <table>
+    <thead>
+      <th>&nbsp;</th>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody id="users">
+
+    </tbody>
+  </table>
   <script src="bundle.js"></script>
 </body>
 </html>
